# does-author-order-matter

./: .gitignore  README.md  analysis.ipynb  data-real.ipynb  data.ipynb  pyproject.toml
data/: papers_FOCS_ICML_NIPS_STOC_2000_2009.json
notebooks/: analysis.ipynb  data.ipynb  sch.ipynb
src/: data.py  latex_accents.py  utils.py
