[tool.poetry]
name = "does-author-order-matter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.7"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
pandas = "^1.1.5"
scipy = "^1.5.4"
statsmodels = "^0.12.1"
tensorflow = "^1.15"
matplotlib-venn = "^0.11.6"
requests = "^2.31.0"
scholarly = "^1.0.2"
tqdm = "^4.54.1"
nameparser = "^1.0.6"
ethnicolr = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
